--- a/package.json
+++ b/package.json
@@ -15,15 +15,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@vitejs/plugin-vue2": "^2.0.0",
-    "@vitest/ui": "^0.24.3",
     "axios": "^1.1.3",
-    "vite": "^3.2.1",
-    "vitest": "^0.24.3",
-    "vue": "^2.7.1",
-    "vue-template-compiler": "^2.7.13"
+    "vue": "^2.7.1"
   },
   "devDependencies": {
+    "@vitejs/plugin-vue2": "^2.0.0",
+    "vite": "^3.2.1",
+    "vitest": "^0.24.3",
+    "@vitest/ui": "^0.24.3",
+    "concurrently": "^7.5.0",
     "jsdom": "^20.0.1",
     "json-server": "^0.17.0"
   }
