--- a/package.json
+++ b/package.json
@@ -16,15 +16,17 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.1.3",
-    "vue": "^2.7.1"
+    "flush-promises": "^1.0.2",
+    "vue": "^2.7.13"
   },
   "devDependencies": {
     "@vitejs/plugin-vue2": "^2.0.0",
-    "vite": "^3.2.1",
-    "vitest": "^0.24.3",
     "@vitest/ui": "^0.24.3",
+    "@vue/test-utils": "^1.3.0",
     "concurrently": "^7.5.0",
     "jsdom": "^20.0.1",
-    "json-server": "^0.17.0"
+    "json-server": "^0.17.0",
+    "vite": "^3.2.1",
+    "vitest": "^0.24.3"
   }
 }
